<resources>
    <string name="app_name">Timetable</string>
    <string name="BackBtn">Back</string>
    <string name="NameOfSubject"></string>
    <string name="NameOfSubjectHint">Subject/Activity/Event</string>
    <string name="Days"></string>
    <string name="DaysHint">What Day Of The Week Is This On?</string>
    <string name="saveBtn">Save</string>
    <string name="CancelBtn">Cancel</string>
    <string name="StartTime"></string>
    <string name="StartTimeHint">Starting Time (24 Hour)</string>
    <string name="EndingTime"></string>
    <string name="EndingTimeHint">Ending Time (24 Hour)</string>
    <string name="ID"></string>
    <string name="IDHint">For Updating and Deleting</string>
    <string name="Displaybtn">Display</string>
    <string name="UpdateBtn">Update</string>
    <string name="DeleteBtn">Delete</string>
    <string name="NowBtn">NOW</string>
    <string name="NextBtn">NEXT</string>
    <string name="Todaytn">Today</string>
    <string name="EverythingBtn">All Entries</string>
    <string name="TV"></string>
    <string name="textview"></string>
    <string name="IDInput"></string>
    <string name="NameInput"></string>
    <string name="StartingTimeInput"></string>
    <string name="EndingTimeInput"></string>
    <string name="IDInputHint">What\'s its ID</string>
    <string name="NameInputHint">What\'s its new name</string>
    <string name="StartingTimeInputHint">What\'s Its New Starting Time (24 hours)</string>
    <string name="EndingTimeInputHint">What\'s Its New Ending Time (24 hours)</string>
    <string name="DeleteButton">Delete</string>
    <string name="UpdateButton">Update</string>
    <string name="DayOfTheWeekHint">What Day Is This On?</string>
    <string name="clickThis">To add/edit a subject</string>
    <string name="clickThis2">click here</string>
    <string name="editHere">To edit an entry</string>
    <string name="editHere2">click here</string>
    <string name="monday"> Monday </string>
    <string name="tuesday"> Tuesday </string>
    <string name="wednesday"> Wednesday </string>
    <string name="thursday"> Thursday </string>
    <string name="friday"> Friday </string>
    <string name="saturday"> Saturday </string>
    <string name="sunday"> Sunday </string>
    <string name="st">Starting Time</string>
    <string name="et">Ending Time</string>
    <string name="colon"> : </string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

</resources>
