<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/NameInput"
        android:layout_width="381dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/NameOfSubjectHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/NameOfSubject"
        app:layout_constraintBottom_toTopOf="@+id/whatdayisthison"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        tools:targetApi="o" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/CancelButton"
        android:layout_width="51dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineAmbientShadowColor="#F9F9F9"
        android:outlineSpotShadowColor="#F9F9F9"
        app:backgroundTint="#FF00FFF7"
        app:fabCustomSize="50dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:maxImageSize="@android:dimen/app_icon_size"
        app:rippleColor="#F9F9F9"
        app:srcCompat="@drawable/ic_clear_red_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/EditButton"
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineAmbientShadowColor="#F9F9F9"
        android:outlineSpotShadowColor="#F9F9F9"
        app:backgroundTint="#00FFF7"
        app:elevation="2.5dp"
        app:fabCustomSize="50dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:maxImageSize="@android:dimen/app_icon_size"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/SaveButton"
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineAmbientShadowColor="#F9F9F9"
        android:outlineSpotShadowColor="#F9F9F9"
        app:backgroundTint="#0066FF"
        app:fabCustomSize="50dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969"
        app:maxImageSize="@android:dimen/app_icon_size"
        app:srcCompat="@drawable/ic_check_green_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginTop="84dp"
        android:text="@string/editHere2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/editHere"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/whatdayisthison"
        android:layout_width="201dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/startingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="@string/StartTimeHint"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/endingTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatdayisthison"
        app:layout_constraintVertical_bias="0.971" />

    <EditText
        android:id="@+id/endingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EndingTimeHint"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatdayisthison"
        app:layout_constraintVertical_bias="0.498" />

</android.support.constraint.ConstraintLayout>